--- a/PHYS_220BL/lab_3/report.tex
+++ b/PHYS_220BL/lab_3/report.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper]{article}
-\usepackage[left=1.0in,top=1.0in,right=1.0in,bottom=1.0in]{geometry}
+\documentclass{article}
+\usepackage[left=0.5in,top=0.5in,right=0.5in,bottom=0.5in]{geometry}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amssymb,amsmath,amsthm,latexsym}
