--- a/PHYS_220B/Midterm_1/Exam1/main.tex
+++ b/PHYS_220B/Midterm_1/Exam1/main.tex
@@ -10,5 +10,62 @@
   latexsym
 }
 \begin{document}
-hi
+\section*{Chapter 21}
+\begin{itemize}
+  \item What is electric charge
+  \item Coulomb Force
+  \item Superposition of forces
+  \item Electric Field
+  \begin{itemize}
+    \item system of charges
+    \item continuous distribution
+    \begin{itemize}
+      \item linear charge density
+      \item surface charge density
+      \item volume charge density
+      \begin{itemize}
+        \item Must know how to derive the expression for electric field for various distributions
+      \end{itemize}
+    \end{itemize}
+  \end{itemize}
+  \item particle in uniform electric field
+  \item electric dipole moment
+  \item torque
+\end{itemize}
+\newpage
+\section*{Chapter 22}
+\begin{itemize}
+  \item Electric Flux
+  \item Gauss's Law
+  \begin{itemize}
+    \item various gaussian surfaces
+    \item finding the electric field for infinite long rod
+    \item finding the electric field for charged surface
+    \item finding the electric field for charged sphere
+    \item finding the electric field for metal sphere
+    \item finding the electric field for  insulating sphere
+  \end{itemize}
+  \item conductors with cavities
+\end{itemize}
+\newpage
+\section*{Chapter 23}
+\begin{itemize}
+  \item work done by electric force
+  \item electric potential energy: total electric potential energy
+  \item electric potential energy: work done  found using the change in potential energy
+  \item conservation of energy
+  \item electric potential (potential)
+  \begin{itemize}
+    \item potential as a potential energy per unit charge
+    \item change potential as a line integral of electric field
+    \item voltage as change in potential energy
+    \item total potential energy for a system of particles
+    \item potential due to continuous distribution
+  \end{itemize}
+  \item equipotential surfaces
+  \item potential gradient
+  \begin{itemize}
+    \item finding the electric field as a partial derivative of the potential as a function of position
+  \end{itemize}
+\end{itemize}
 \end{document}
