--- a/PHYS_220BL/lab_2/report.tex
+++ b/PHYS_220BL/lab_2/report.tex
@@ -25,7 +25,6 @@
     \end{equation}
   \end{center}
 \end{table}
-
 \begin{table}[h!]
   \begin{center}
     \caption{Voltage vs. Current for \(R_2\)}\label{tab:table1}
@@ -43,7 +42,6 @@
     \end{equation}
   \end{center}
 \end{table}
-
 \begin{table}[h!]
   \begin{center}
     \caption{Voltage vs. Current for \(R_1\) and \(R_2\) in series}\label{tab:table1}
@@ -62,7 +60,6 @@
     \end{equation}
   \end{center}
 \end{table}
-
 \begin{table}[h!]
   \begin{center}
     \caption{Voltage vs. Current for \(R_1\) and \(R_2\) in parallel}\label{tab:table1}
@@ -81,4 +78,14 @@
     \end{equation}
   \end{center}
 \end{table}
+\begin{enumerate}
+  \item Consider the diagram of the experiment Fig. 2.2 and the real life situation. Are your calculated values for the unknown resistances slightly larger or slightly smaller than the actual unknown resistance? Explain.
+  \begin{itemize}
+    \item The calculated values are slightly larger because resistance is directly proportional to the temperature and increased temperature will led to increase in resistance.
+  \end{itemize}
+  \item We have tried to keep the currents low in this experiment, what are the various things that could occur if the current is allowed to be larger?
+  \begin{itemize}
+    \item By using low current, we can avoid larger increase in resistance of wire.
+  \end{itemize}
+\end{enumerate}
 \end{document}
