--- a/PHYS_220BL/lab_4/report.tex
+++ b/PHYS_220BL/lab_4/report.tex
@@ -3,22 +3,11 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[table]{xcolor}
+\usepackage{amssymb,amsmath,amsthm}
+\usepackage{changepage,threeparttable}
+\usepackage{booktabs,multirow}
 \usepackage{graphicx}
 \usepackage{soul}
-\usepackage{
-  changepage,
-  threeparttable
-}
-\usepackage{
-  booktabs,
-  multirow
-}
-\usepackage{
-  amssymb,
-  amsmath,
-  amsthm,
-  latexsym
-}
 \graphicspath{{./images/}}
 \def\R#1#2{\(R_{\text{\tiny#1,\tiny#2}}(\Omega)\)}
 \def\RTH#1#2{R_{\text{\tiny#1,\tiny#2}} (\Omega)}
@@ -31,30 +20,31 @@
 \date{\today}
 \begin{document}
 \maketitle
+\vspace*{-1cm}
 \begin{table}[!htp]\centering
   \subsection*{Part 1}
   \begin{tabular}{|c|c|c|c|c|c|c|}\hline
-  \multicolumn{6}{|c|}{\textbf{Table 1: Parallel networks}} \\\hline
+  \multicolumn{6}{|c|}{\textbf{Table 1: Parallel Networks}} \\\hline
   \R{1}{th} & \R{1}{exp} & \R{2}{th} & \R{2}{exp} & \R{P}{th} & \R{P}{exp} \\\hline
-  1k & 0.999 & 2k & 1.990k & 0.6651 & 0.666 \\\hline
-  1k & 0.999 & 510 & 0.511 & 0.3381 & 0.357 \\\hline
-  1k & 0.999 & 3.3k & 3.290k & 0.7663 & 0.770 \\\hline
-  10k & 9.970k & 5.1k & 5.070k & 3.3609k & 3.360k \\\hline
-  10k & 9.970k & 20k & 19.940k & 6.6467k & 6.620k \\\hline
-  10k & 9.970k & 47k & 47.400k & 8.2374k & 8.200k \\\hline
+  1k & 0.99k & 2k & 1.99k & 0.67k & 0.67k \\\hline
+  1k & 0.99k & 510 & 0.51k & 0.34k & 0.36k \\\hline
+  1k & 0.99k & 3.3k & 3.29k & 0.77k & 0.77k \\\hline
+  10k & 9.97k & 5.1k & 5.07k & 3.36k & 3.36k \\\hline
+  10k & 9.97k & 20k & 19.94k & 6.65k & 6.62k \\\hline
+  10k & 9.97k & 47k & 47.40k & 8.24k & 8.20k \\\hline
   \end{tabular}
   \begin{center}
-    \subsection*{Picture: \R{1}{exp},~\R{2}{exp},~\R{P}{exp}}
+    \subsection*{Picture 1: \R{1}{exp},~\R{2}{exp},~\R{P}{exp}}
     \includegraphics[scale=0.079,height=4.5cm]{R1.jpeg}
     \includegraphics[scale=0.070,height=4.5cm]{R2.jpeg}
     \includegraphics[scale=0.083,height=4.5cm]{RP.jpeg}
     \subsection*{Graph 1}
-    \includegraphics[scale=0.18]{RP_graph.jpeg}
+    \includegraphics[scale=0.18]{parallel.jpeg}
     \subsection*{Discussion 1}
     \begin{enumerate}
       \item Discuss how well the experimental values of the parallel networks followed the theoretically expected value and quantify that relation.
       \begin{itemize}
-        \item
+        \item The experimental and theoretical values are relatively the same with less than 5\% difference proving that the voltages are same with currents \(i_1\) and \(i_2\) flowing through the split.
       \end{itemize}
     \end{enumerate}
   \end{center}
@@ -63,27 +53,27 @@
 \begin{table}[!htp]\centering
   \subsection*{Part 2}
   \begin{tabular}{|c|c|c|c|c|c|c|}\hline
-  \multicolumn{6}{|c|}{\textbf{Table 2: Parallel networks}} \\\hline
+  \multicolumn{6}{|c|}{\textbf{Table 2: Series Networks}} \\\hline
   \R{1}{th} & \R{1}{exp} & \R{2}{th} & \R{2}{exp} & \R{S}{th} & \R{S}{exp} \\\hline
-  1k & 0.999 & 2k & 1.990k & 2.9890k & \\\hline
-  1k & 0.999 & 510 & 0.511 & 1.5100k & \\\hline
-  1k & 0.999 & 3.3k & 3.290k & 4.2890k & \\\hline
-  10k & 9.970k & 5.1k & 5.070k & 15.0400k & \\\hline
-  10k & 9.970k & 20k & 19.940k & 29.9100k & \\\hline
-  10k & 9.970k & 47k & 47.400k & 57.3700k & \\\hline
+  1k & 0.99k & 2k & 1.99k & 2.99k & 3.01k \\\hline
+  1k & 0.99k & 510 & 0.51k & 1.51k & 1.52k \\\hline
+  1k & 0.99k & 3.3k & 3.29k & 4.29k & 4.31k \\\hline
+  10k & 9.97k & 5.1k & 5.07k & 15.04k & 14.98k \\\hline
+  10k & 9.97k & 20k & 19.94k & 29.91k & 29.80k\\\hline
+  10k & 9.97k & 47k & 47.40k & 57.37k & 57.40k \\\hline
   \end{tabular}
   \begin{center}
-    \subsection*{Picture: \R{1}{exp},~\R{2}{exp},~\R{S}{exp}}
+    \subsection*{Picture 2: \R{1}{exp},~\R{2}{exp},~\R{S}{exp}}
     \includegraphics[scale=0.079,height=4.5cm]{R1.jpeg}
     \includegraphics[scale=0.070,height=4.5cm]{R2.jpeg}
-    \includegraphics[scale=0.083,height=4.5cm]{RP.jpeg}
+    \includegraphics[scale=0.083,height=4.5cm]{RS.jpeg}
     \subsection*{Graph 2}
-    \includegraphics[scale=0.18]{RP_graph.jpeg}
+    \includegraphics[scale=0.18]{series.jpeg}
     \subsection*{Discussion 2}
     \begin{enumerate}
       \item Discuss how well the experimental values of the series networks followed the theoretically expected value and quantify that relation.
       \begin{itemize}
-        \item
+        \item The experimental and theoretical values are relatively the same with less than 5\% difference proving that all charges that flow through \(R_1\) must also flow through \(R_2\), so currents \(i_1\) and \(i_2\) flowing through both is the same.
       \end{itemize}
     \end{enumerate}
   \end{center}
