--- a/PHYS_220BL/lab_5/report.tex
+++ b/PHYS_220BL/lab_5/report.tex
@@ -27,12 +27,26 @@
   \begin{tabular}{|c|c|c|c|c|c|c|c|}\hline
   \multicolumn{7}{|c|}{\textbf{Table 1: Series Resistors}} \\\hline
   \R{1} & \R{2} & \V{1} & V/DIV for \V{1} & \V{12} & \RDIV\ & \VDIV\ \\\hline
-  1k & 2k & 0 & 0 & 0 & 0 & 0 \\\hline
-  1k & 100 & 0 & 0 & 0 & 0 & 0 \\\hline
-  1k & 4.7k & 0 & 0 & 0 & 0 & 0 \\\hline
-  1k & 10k & 0 & 0 & 0 & 0 & 0 \\\hline
-  1k & 100k & 0 & 0 & 0 & 0 & 0 \\\hline
+  1k & 2k & 0.68V & 1V & 2.02V & 0.33k & 0.34V \\\hline
+  1k & 100 & 1.82V & 1V & 1.98V & 0.91k & 0.92V \\\hline
+  1k & 4.7k & 0.40V & 1V & 2.02V & 0.18k & 0.2V \\\hline
+  1k & 10k & 0.28V & 1V & 2.02V & 0.09k & 0.14V \\\hline
+  1k & 100k & 0V & 0V & 0V & 0.01k & 0 \\\hline
   \end{tabular}
+  \begin{center}
+    \subsection*{Picture 1: }
+    % \includegraphics[scale=0.079,height=4.5cm]{R1.jpeg}
+    % \includegraphics[scale=0.070,height=4.5cm]{R2.jpeg}
+    \subsection*{Graph 1}
+    % \includegraphics[scale=0.18]{parallel.jpeg}
+    \subsection*{Discussion 1}
+    \begin{enumerate}
+      \item What did you expect to see, and did you see it? If not, why not. If so, how well (quantitatively) did it fit your expectation?
+      \begin{itemize}
+        \item
+      \end{itemize}
+    \end{enumerate}
+  \end{center}
 \end{table}
 \newpage
 \begin{table}[!htp]\centering
@@ -46,5 +60,19 @@
   1k & 10k & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\\hline
   1k & 100k & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\\hline
   \end{tabular}
+  \begin{center}
+    \subsection*{Picture 2: }
+    % \includegraphics[scale=0.079,height=4.5cm]{R1.jpeg}
+    % \includegraphics[scale=0.070,height=4.5cm]{R2.jpeg}
+    \subsection*{Graph 2}
+    % \includegraphics[scale=0.18]{parallel.jpeg}
+    \subsection*{Discussion 2}
+    \begin{enumerate}
+      \item What did you expect to see, and did you see it? If not, why not. If so, how well (quantitatively) did it fit your expectation?
+      \begin{itemize}
+        \item
+      \end{itemize}
+    \end{enumerate}
+  \end{center}
 \end{table}
 \end{document}
