--- a/PHYS_220BL/lab_6/report.tex
+++ b/PHYS_220BL/lab_6/report.tex
@@ -20,8 +20,8 @@
   \subsection*{Part 1}
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}\hline
   \multicolumn{11}{|c|}{\textbf{Table 1: Impedance of a Capacitor}} \\\hline
-  C & R & \R{V}{RC} & \R{V}{R} & V/DIV for \R{V}{R} & \R{f}{gen} & \R{f}{osc} & \R{I}{R} & \R{V}{C} & \R{X}{C,exp} & \R{X}{X,the} \\\hline
-  0.22\(\mu F\) & 1k\(\Omega \) &  &  &  &  &  &  &  &  &  \\\hline
+  C & R & \R{V}{RC} & \R{V}{R} & V/DIV for \R{V}{R} & \R{f}{gen} & \R{f}{osc} & \R{I}{R} & \R{V}{C} & \R{X}{C,exp} & \R{X}{C,the} \\\hline
+  0.22\(\mu F\) & 1k\(\Omega \) & 3.97V & 3.08V & 2V & 523Hz & 538.793Hz & 0.0031 & 2.5049V & 993.6\(\Omega \) & 1383.2\(\Omega \) \\\hline
   0.33\(\mu F\) & 1k\(\Omega \) &  &  &  &  &  &  &  &  &  \\\hline
   0.10\(\mu F\) & 1k\(\Omega \) &  &  &  &  &  &  &  &  &  \\\hline
   0.47\(\mu F\) & 1k\(\Omega \) &  &  &  &  &  &  &  &  &  \\\hline
@@ -29,9 +29,9 @@
   1.00\(\mu F\) & 1k\(\Omega \) &  &  &  &  &  &  &  &  &  \\\hline
   \end{tabular}
   \begin{center}
-    \subsection*{Picture 1}
-    % \includegraphics[width=8cm,height=4.5cm]{SV12.jpeg}
-    % \includegraphics[width=8cm,height=4.5cm]{SV1.jpeg}
+    \subsection*{Picture \R{R}{RC} \& \R{R}{C}}
+    \includegraphics[width=8cm,height=4.5cm]{Vrc.jpeg}
+    \includegraphics[width=8cm,height=4.5cm]{Vr.jpeg}
     \subsection*{Graph 1}
     % \includegraphics[scale=0.2]{series.jpg}
     \subsection*{Graph 2}
