--- a/PHYS_220BL/lab_7/report.tex
+++ b/PHYS_220BL/lab_7/report.tex
@@ -19,36 +19,36 @@
 \subsection*{Part 1}
 \begin{tabular}{|c|c|}\hline
   \multicolumn{2}{|c|}{\textbf{Table 1: Geometry of the Capacitor}} \\\hline
-  Width 1 \(w_1\) & \\\hline
-  Width 2 \(w_2\) & \\\hline
-  Area of overlap A & \\\hline
+  Width 1 \(w_1\) & 6'' \\\hline
+  Width 2 \(w_2\) & 6'' \\\hline
+  Area of overlap A & 276'' \\\hline
   \end{tabular}
 \end{table}
 
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{10}{|c|}{\textbf{Table 2: Impedance the DIY Capacitor}} \\\hline
-    \(n\) & \(R\) & \(V_{RC}\) & \(V_R\) & V/DIV for \(V_R\) & \(f_{gen}\) & \(f_osc\) & \(I_R\) & \(V_C\) & \(V_{C,exp}\) \\\hline
-    1 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    2 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    1 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    2 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    1 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    2 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 680\(\Omega \) & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\hline
+    \(n\) & \(R\) & \(V_{RC}\) & \(V_R\) & V/DIV for \(V_R\) & \(f_{gen}\) & \(f_{osc}\) & \(I_R\) & \(V_C\) & \(X_{C,exp}\) \\\hline
+    1 & 470\(\Omega \) & 4.54V & 2.10V & 2V & 2023Hz & 2052Hz & 0.0045 & 4.0251 & 894.47 \\\hline
+    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    1 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    1 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
   \end{tabular}
 \end{table}
 
 \begin{center}
   \subsection*{\(V_R\)}
-  % \includegraphics[scale=0.1]{Vrc.jpeg}
+  \includegraphics[scale=0.1]{2.jpeg}
   \subsection*{\(V_{RC}\)}
-  % \includegraphics[scale=0.1]{Vr.jpeg}
+  \includegraphics[scale=0.1]{1.jpeg}
 \end{center}
 
 \newpage
