--- a/PHYS_220BL/lab_7/report.tex
+++ b/PHYS_220BL/lab_7/report.tex
@@ -30,17 +30,17 @@
     \multicolumn{10}{|c|}{\textbf{Table 2: Impedance the DIY Capacitor}} \\\hline
     \(n\) & \(R\) & \(V_{RC}\) & \(V_R\) & V/DIV for \(V_R\) & \(f_{gen}\) & \(f_{osc}\) & \(I_R\) & \(V_C\) & \(X_{C,exp}\) \\\hline
     1 & 470\(\Omega \) & 4.54V & 2.10V & 2V & 2023Hz & 2052Hz & 0.0045 & 4.0251 & 894.47 \\\hline
-    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    1 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    1 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    2 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    3 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
-    4 & 470\(\Omega \) & 0 & 0 & 2V & 0 & 0 & 0 & 0 & 0 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 2.35V & 2V & 2023Hz & 2052Hz & 0.0050 & 3.8845 & 776.90 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 2.19V & 2V & 2023Hz & 2052Hz & 0.0047 & 3.9769 & 846.15 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 1.86V & 2V & 2023Hz & 2052Hz & 0.0040 & 4.1415 & 1035.40 \\\hline
+    1 & 470\(\Omega \) & 4.54V & 2.67V & 2V & 2023Hz & 2052Hz & 0.0057 & 3.6719 & 644.19 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 2.43V & 2V & 2023Hz & 2052Hz & 0.0052 & 3.8349 & 737.48 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 2.02V & 2V & 2023Hz & 2052Hz & 0.0043 & 4.0659 & 945.56 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 1.86V & 2V & 2023Hz & 2052Hz & 0.0040 & 4.1415 & 1035.40 \\\hline
+    1 & 470\(\Omega \) & 4.54V & 2.67V & 2V & 2023Hz & 2052Hz & 0.0057 & 3.6719 & 644.19 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 2.35V & 2V & 2023Hz & 2052Hz & 0.0050 & 3.8845 & 776.90 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 1.94 & 2V & 2023Hz & 2052Hz & 0.0041 & 4.1046 & 1001.10 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 1.78 & 2V & 2023Hz & 2052Hz & 0.0038 & 4.1765 & 1099.10 \\\hline
   \end{tabular}
 \end{table}
 
