--- a/PHYS_220BL/lab_7/report.tex
+++ b/PHYS_220BL/lab_7/report.tex
@@ -39,8 +39,8 @@
     4 & 470\(\Omega \) & 4.54V & 1.86V & 2V & 2023Hz & 2052Hz & 0.0040 & 4.1415 & 1035.40 \\\hline
     1 & 470\(\Omega \) & 4.54V & 2.67V & 2V & 2023Hz & 2052Hz & 0.0057 & 3.6719 & 644.19 \\\hline
     2 & 470\(\Omega \) & 4.54V & 2.35V & 2V & 2023Hz & 2052Hz & 0.0050 & 3.8845 & 776.90 \\\hline
-    3 & 470\(\Omega \) & 4.54V & 1.94 & 2V & 2023Hz & 2052Hz & 0.0041 & 4.1046 & 1001.10 \\\hline
-    4 & 470\(\Omega \) & 4.54V & 1.78 & 2V & 2023Hz & 2052Hz & 0.0038 & 4.1765 & 1099.10 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 1.94V & 2V & 2023Hz & 2052Hz & 0.0041 & 4.1046 & 1001.10 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 1.78V & 2V & 2023Hz & 2052Hz & 0.0038 & 4.1765 & 1099.10 \\\hline
   \end{tabular}
 \end{table}
 
