--- a/PHYS_220BL/lab_7/report.tex
+++ b/PHYS_220BL/lab_7/report.tex
@@ -51,12 +51,11 @@
   \includegraphics[scale=0.1]{1.jpeg}
 \end{center}
 
-\newpage
 \begin{center}
-  \subsection*{Graph 1}
-  % \includegraphics[scale=0.25]{graph1.jpg}
-  \subsection*{Graph 2}
-  % \includegraphics[scale=0.25]{graph2.jpg}
+  \subsection*{Graph 1:}
+  \includegraphics[scale=0.4]{graph1.jpg}
+  \subsection*{Graph 2:}
+  \includegraphics[scale=0.4]{graph2.jpg}
 \end{center}
 
 \begin{center}
@@ -67,7 +66,7 @@
     \end{itemize}
     \item What do you think could cause the offset in the fit?
     \begin{itemize}
-      \item
+      \item Mostly from the aluminum foil
     \end{itemize}
   \end{enumerate}
 \end{center}
