--- a/PHYS_220BL/lab_7/report.tex
+++ b/PHYS_220BL/lab_7/report.tex
@@ -29,44 +29,45 @@
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{10}{|c|}{\textbf{Table 2: Impedance the DIY Capacitor}} \\\hline
     \(n\) & \(R\) & \(V_{RC}\) & \(V_R\) & V/DIV for \(V_R\) & \(f_{gen}\) & \(f_{osc}\) & \(I_R\) & \(V_C\) & \(X_{C,exp}\) \\\hline
-    1 & 470\(\Omega \) & 4.54V & 2.10V & 2V & 2023Hz & 2052Hz & 0.0045 & 4.0251 & 894.47 \\\hline
-    2 & 470\(\Omega \) & 4.54V & 2.35V & 2V & 2023Hz & 2052Hz & 0.0050 & 3.8845 & 776.90 \\\hline
-    3 & 470\(\Omega \) & 4.54V & 2.19V & 2V & 2023Hz & 2052Hz & 0.0047 & 3.9769 & 846.15 \\\hline
-    4 & 470\(\Omega \) & 4.54V & 1.86V & 2V & 2023Hz & 2052Hz & 0.0040 & 4.1415 & 1035.40 \\\hline
-    1 & 470\(\Omega \) & 4.54V & 2.67V & 2V & 2023Hz & 2052Hz & 0.0057 & 3.6719 & 644.19 \\\hline
-    2 & 470\(\Omega \) & 4.54V & 2.43V & 2V & 2023Hz & 2052Hz & 0.0052 & 3.8349 & 737.48 \\\hline
-    3 & 470\(\Omega \) & 4.54V & 2.02V & 2V & 2023Hz & 2052Hz & 0.0043 & 4.0659 & 945.56 \\\hline
-    4 & 470\(\Omega \) & 4.54V & 1.86V & 2V & 2023Hz & 2052Hz & 0.0040 & 4.1415 & 1035.40 \\\hline
-    1 & 470\(\Omega \) & 4.54V & 2.67V & 2V & 2023Hz & 2052Hz & 0.0057 & 3.6719 & 644.19 \\\hline
-    2 & 470\(\Omega \) & 4.54V & 2.35V & 2V & 2023Hz & 2052Hz & 0.0050 & 3.8845 & 776.90 \\\hline
-    3 & 470\(\Omega \) & 4.54V & 1.94V & 2V & 2023Hz & 2052Hz & 0.0041 & 4.1046 & 1001.10 \\\hline
-    4 & 470\(\Omega \) & 4.54V & 1.78V & 2V & 2023Hz & 2052Hz & 0.0038 & 4.1765 & 1099.10 \\\hline
+    1 & 470\(\Omega \) & 4.54V & 3.97V & 2V & 2023Hz & 2052Hz & 0.0084 & 2.2024 & 260.74 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 3.89V & 2V & 2023Hz & 2052Hz & 0.0083 & 2.3408 & 282.83 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 3.65V & 2V & 2023Hz & 2052Hz & 0.0078 & 2.6998 & 346.65 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 3.48V & 2V & 2023Hz & 2052Hz & 0.0074 & 2.9157 & 393.78 \\\hline
+    1 & 470\(\Omega \) & 4.54V & 4.05V & 2V & 2023Hz & 2052Hz & 0.0086 & 2.0516 & 238.09 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 3.89V & 2V & 2023Hz & 2052Hz & 0.0083 & 2.3408 & 282.83 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 3.73V & 2V & 2023Hz & 2052Hz & 0.0079 & 2.5882 & 326.13 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 3.40V & 2V & 2023Hz & 2052Hz & 0.0072 & 3.0086 & 415.89 \\\hline
+    1 & 470\(\Omega \) & 4.54V & 3.89V & 2V & 2023Hz & 2052Hz & 0.0083 & 2.3408 & 282.83 \\\hline
+    2 & 470\(\Omega \) & 4.54V & 3.65V & 2V & 2023Hz & 2052Hz & 0.0078 & 2.6998 & 346.65 \\\hline
+    3 & 470\(\Omega \) & 4.54V & 3.56V & 2V & 2023Hz & 2052Hz & 0.0076 & 2.8174 & 371.97 \\\hline
+    4 & 470\(\Omega \) & 4.54V & 3.40V & 2V & 2023Hz & 2052Hz & 0.0072 & 3.0086 & 415.89 \\\hline
   \end{tabular}
 \end{table}
 
 \begin{center}
-  \subsection*{\(V_R\)}
-  \includegraphics[scale=0.1]{2.jpeg}
-  \subsection*{\(V_{RC}\)}
-  \includegraphics[scale=0.1]{1.jpeg}
+  \subsection*{\(V_{RC}\) Setup}
+  \includegraphics[scale=0.07]{VRC.jpeg}
+  \subsection*{\(V_{R}\) Setup}
+  \includegraphics[scale=0.07]{VR.jpeg}
 \end{center}
 
 \begin{center}
   \subsection*{Graph 1:}
-  \includegraphics[scale=0.4]{graph1.jpg}
+  \includegraphics[scale=0.2]{graph1.jpg}
   \subsection*{Graph 2:}
-  \includegraphics[scale=0.4]{graph2.jpg}
+  \includegraphics[scale=0.2]{graph2.jpg}
 \end{center}
-
+\newpage
 \begin{center}
   \begin{enumerate}
     \item What slope do you find for graph 2 and how does it compare to your expectation?
     \begin{itemize}
-      \item
+      \item Slope = 330.36 \(\pm \) 63.22 \(\Omega \)
+      \item Expectation = 0.0 \(\pm \) 0.0 \(\Omega \)
     \end{itemize}
     \item What do you think could cause the offset in the fit?
     \begin{itemize}
-      \item Mostly from the aluminum foil
+      \item Mostly from the aluminum foil not being constant and always changing its form.
     \end{itemize}
   \end{enumerate}
 \end{center}
